Do not use String.blank() from java11